# ana-scrappers

./: README.md  pyproject.toml
leis_br/: __init__.py  __main__.py  agendador.py  base.py  cache.py  modelos.py  pipeline.py
leis_br/fontes/: alerj.py  lexml.py  planalto.py  stf.py  stj.py  tst.py
