[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leis-br"
version = "0.1.0"
description = "Scrapers de legislação e jurisprudência brasileira (Planalto, LexML, STF, STJ, TST)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "pypdf[all]>=6.9.0",
]

[project.optional-dependencies]
scrapers = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "apscheduler>=3.10.0",
]
playwright = [
    "playwright>=1.40.0",
]
all = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "apscheduler>=3.10.0",
    "playwright>=1.40.0",
]

[project.scripts]
leis-br = "leis_br.__main__:executar_cli"

[tool.hatch.build.targets.wheel]
packages = ["leis_br"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
